# DeepFileX

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs
src/: crypto.rs  db.rs  lib.rs  main.rs  ntfs.rs  parser.rs  win_shell.rs
src/blackbox/: buffer.rs  error.rs  exporter.rs  facade.rs  macros.rs  mod.rs  sanitizer.rs  session.rs  storage.rs  types.rs
src/update/: backup.rs  config.rs  download.rs  error.rs  installer.rs  manifest.rs  mod.rs  rollback.rs  state.rs  verify.rs
